fix tutorial missing pyro.clear_param_store

--- a/tutorial/source/gp.ipynb
+++ b/tutorial/source/gp.ipynb
@@ -423,6 +423,7 @@
    ],
    "source": [
     "# Define the same model as before.\n",
+    "pyro.clear_param_store()\n",
     "kernel = gp.kernels.RBF(input_dim=1, variance=torch.tensor(5.),\n",
     "                        lengthscale=torch.tensor(10.))\n",
     "gpr = gp.models.GPRegression(X, y, kernel, noise=torch.tensor(1.))\n",
@@ -567,6 +568,7 @@
     "Xu = torch.arange(20.) / 4.0\n",
     "\n",
     "# initialize the kernel and model\n",
+    "pyro.clear_param_store()\n",
     "kernel = gp.kernels.RBF(input_dim=1)\n",
     "# we increase the jitter for better numerical stability\n",
     "sgpr = gp.models.SparseGPRegression(X, y, kernel, Xu=Xu, jitter=1.0e-5)\n",
@@ -673,6 +675,7 @@
     "Xu = torch.arange(10.) / 2.0\n",
     "\n",
     "# initialize the kernel, likelihood, and model\n",
+    "pyro.clear_param_store()\n",
     "kernel = gp.kernels.RBF(input_dim=1)\n",
     "likelihood = gp.likelihoods.Gaussian()\n",
     "# turn on \"whiten\" flag for more stable optimization\n",
