change link with parens

--- a/tutorial/source/bayesian_regression.ipynb
+++ b/tutorial/source/bayesian_regression.ipynb
@@ -25,7 +25,7 @@
     " - [Linear Regression](#Linear-Regression)\n",
     "   - [Training with PyTorch Optimizers](#Training-with-PyTorch-Optimizers)\n",
     "   - [Regression Fit](#Plotting-the-Regression-Fit)\n",
-    " - [Bayesian Regression with Pyro's SVI](#Bayesian-Regression-with-Pyro's-Stochastic-Variational-Inference-\\(SVI\\))\n",
+    " - [Bayesian Regression with Pyro's SVI](#Bayesian-Regression-with-Pyro's-Stochastic-Variational-Inference-%28SVI%29)\n",
     "   - [Model](#Model)\n",
     "   - [Using an AutoGuide](#Using-an-AutoGuide)\n",
     "   - [Optimizing the Evidence Lower Bound](#Optimizing-the-Evidence-Lower-Bound)\n",
