fix broken link

--- a/tutorial/source/bayesian_regression.ipynb
+++ b/tutorial/source/bayesian_regression.ipynb
@@ -30,7 +30,7 @@
     "   - [Using an AutoGuide](#Using-an-AutoGuide)\n",
     "   - [Optimizing the Evidence Lower Bound](#Optimizing-the-Evidence-Lower-Bound)\n",
     " - [Model Evaluation](#Model-Evaluation)\n",
-    " - [Serving the Model using TorchScript](Model-Serving-via-TorchScript)"
+    " - [Serving the Model using TorchScript](#Model-Serving-via-TorchScript)"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "source": [
     "## Linear Regression\n",
     "\n",
-    "We would like to predict log GDP per capita of a nation as a function of two features from the dataset - whether the nation is in Africa, and its Terrain Ruggedness Index. Let us define our regression model. We will use [PyroModule](http://docs.pyro.ai/en/dev/nn.html#module-pyro.nn.module) which is very similar to PyTorch's `nn.Module`, but additionally supports [Pyro primitives](http://docs.pyro.ai/en/dev/primitives.html#primitives) as attributes and can be modified by Pyro's [effect handlers](http://pyro.ai/examples/effect_handlers.html) (see the [next section](#Model) on how we can have module attributes that are `pyro.sample` primitives). We use `nn.Parameter` to designate learnable parameters in our model. When used inside a `PyroModule`, these are automatically registered in Pyro's param store. While this model does not require us to constrain the value of these parameters during optimization, this can also be easily achieved in `PyroModule` using [PyroParam](http://docs.pyro.ai/en/dev/nn.html#pyro.nn.module.PyroParam). Note that while the `forward` method of `LinearRegression` inherits from `nn.Linear`, it can also be easily overridden. e.g. in the case of logistic regression, we apply a sigmoid transformation to the linear predictor."
+    "We would like to predict log GDP per capita of a nation as a function of two features from the dataset - whether the nation is in Africa, and its Terrain Ruggedness Index. Let us define our regression model. We will use [PyroModule](http://docs.pyro.ai/en/dev/nn.html#module-pyro.nn.module) which is very similar to PyTorch's `nn.Module`, but additionally supports [Pyro primitives](http://docs.pyro.ai/en/dev/primitives.html#primitives) as attributes and can be modified by Pyro's [effect handlers](http://pyro.ai/examples/effect_handlers.html) (see the [next section](#Model) on how we can have module attributes that are `pyro.sample` primitives). We use `nn.Parameter` to designate learnable parameters in our model. When used inside a `PyroModule`, these are automatically registered in Pyro's param store. While this model does not require us to constrain the value of these parameters during optimization, this can also be easily achieved in `PyroModule` using the [PyroParam](http://docs.pyro.ai/en/dev/nn.html#pyro.nn.module.PyroParam) statement. Note that while the `forward` method of `LinearRegression` inherits from `nn.Linear`, it can also be easily overridden. e.g. in the case of logistic regression, we apply a sigmoid transformation to the linear predictor."
    ]
   },
   {
@@ -750,9 +750,8 @@
     "        \n",
     "    def forward(self, *args, **kwargs):\n",
     "        samples = {}\n",
-    "        with torch.no_grad():\n",
-    "            guide_trace = poutine.trace(guide).get_trace(*args, **kwargs)\n",
-    "            model_trace = poutine.trace(poutine.replay(model, guide_trace)).get_trace(*args, **kwargs)\n",
+    "        guide_trace = poutine.trace(guide).get_trace(*args, **kwargs)\n",
+    "        model_trace = poutine.trace(poutine.replay(model, guide_trace)).get_trace(*args, **kwargs)\n",
     "        for site in prune_subsample_sites(model_trace).stochastic_nodes:\n",
     "            samples[site] = model_trace.nodes[site]['value']\n",
     "        return tuple(v for _, v in sorted(samples.items()))\n",
