Switch to notation PyroModule[nn.Linear]

--- a/tutorial/source/bayesian_regression.ipynb
+++ b/tutorial/source/bayesian_regression.ipynb
@@ -147,10 +147,10 @@
    "source": [
     "## Linear Regression\n",
     "\n",
-    "We would like to predict log GDP per capita of a nation as a function of two features from the dataset - whether the nation is in Africa, and its Terrain Ruggedness Index. We will create a trivial class called `Pyro(nn.Linear)` that subclasses [PyroModule](http://docs.pyro.ai/en/dev/nn.html#module-pyro.nn.module) and `torch.nn.Linear`. `PyroModule` is very similar to PyTorch's `nn.Module`, but additionally supports [Pyro primitives](http://docs.pyro.ai/en/dev/primitives.html#primitives) as attributes that can be modified by Pyro's [effect handlers](http://pyro.ai/examples/effect_handlers.html) (see the [next section](#Model) on how we can have module attributes that are `pyro.sample` primitives). Some general notes:\n",
+    "We would like to predict log GDP per capita of a nation as a function of two features from the dataset - whether the nation is in Africa, and its Terrain Ruggedness Index. We will create a trivial class called `PyroModule[nn.Linear]` that subclasses [PyroModule](http://docs.pyro.ai/en/dev/nn.html#module-pyro.nn.module) and `torch.nn.Linear`. `PyroModule` is very similar to PyTorch's `nn.Module`, but additionally supports [Pyro primitives](http://docs.pyro.ai/en/dev/primitives.html#primitives) as attributes that can be modified by Pyro's [effect handlers](http://pyro.ai/examples/effect_handlers.html) (see the [next section](#Model) on how we can have module attributes that are `pyro.sample` primitives). Some general notes:\n",
     "\n",
     "  - Learnable parameters in PyTorch modules are instances of `nn.Parameter`, in this case the `weight` and `bias` parameters of the `nn.Linear` class. When declared inside a `PyroModule` as attributes, these are automatically registered in Pyro's param store. While this model does not require us to constrain the value of these parameters during optimization, this can also be easily achieved in `PyroModule` using the [PyroParam](http://docs.pyro.ai/en/dev/nn.html#pyro.nn.module.PyroParam) statement. \n",
-    "  - Note that while the `forward` method of `Pyro(nn.Linear)` inherits from `nn.Linear`, it can also be easily overridden. e.g. in the case of logistic regression, we apply a sigmoid transformation to the linear predictor."
+    "  - Note that while the `forward` method of `PyroModule[nn.Linear]` inherits from `nn.Linear`, it can also be easily overridden. e.g. in the case of logistic regression, we apply a sigmoid transformation to the linear predictor."
    ]
   },
   {
@@ -160,7 +160,10 @@
    "outputs": [],
    "source": [
     "from torch import nn\n",
-    "from pyro.nn import Pyro, PyroModule\n"
+    "from pyro.nn import PyroModule\n",
+    "\n",
+    "assert issubclass(PyroModule[nn.Linear], nn.Linear)\n",
+    "assert issubclass(PyroModule[nn.Linear], PyroModule)\n"
    ]
   },
   {
@@ -227,7 +230,7 @@
     "x_data, y_data = data[:, :-1], data[:, -1]\n",
     "\n",
     "# Regression model\n",
-    "linear_reg_model = Pyro(nn.Linear)(3, 1)\n",
+    "linear_reg_model = PyroModule[nn.Linear](3, 1)\n",
     "\n",
     "# Define loss and optimize\n",
     "loss_fn = torch.nn.MSELoss(reduction='sum')\n",
@@ -323,7 +326,7 @@
     "\n",
     "Making a Bayesian model for linear regression is very intuitive using `PyroModule` as earlier. Note the following:\n",
     "\n",
-    " - The `BayesianRegression` module internally uses the same `Pyro(nn.Linear)` module. However, note that we replace the `weight` and the `bias` of the this module with `PyroSample` statements. These statements allow us to place a prior over the `weight` and `bias` parameters, instead of treating them as fixed learnable parameters. For the bias component, we set a reasonably wide prior since it is likely to be substantially above 0.\n",
+    " - The `BayesianRegression` module internally uses the same `PyroModule[nn.Linear]` module. However, note that we replace the `weight` and the `bias` of the this module with `PyroSample` statements. These statements allow us to place a prior over the `weight` and `bias` parameters, instead of treating them as fixed learnable parameters. For the bias component, we set a reasonably wide prior since it is likely to be substantially above 0.\n",
     " - The `BayesianRegression.forward` method specifies the generative process. We generate the mean value of the response by calling the `linear` module (which, as you saw, samples the `weight` and `bias` parameters from the prior and returns a value for the mean response). Finally we use the `obs` argument to the `pyro.sample` statement to condition on the observed data `y_data` with a learned observation noise `sigma`. The model returns the regression line given by the variable `mean`."
    ]
   },
@@ -339,7 +342,7 @@
     "class BayesianRegression(PyroModule):\n",
     "    def __init__(self, in_features, out_features):\n",
     "        super().__init__()\n",
-    "        self.linear = Pyro(nn.Linear)(in_features, out_features)\n",
+    "        self.linear = PyroModule[nn.Linear](in_features, out_features)\n",
     "        self.linear.weight = PyroSample(dist.Normal(0., 1.).expand([out_features, in_features]).to_event(2))\n",
     "        self.linear.bias = PyroSample(dist.Normal(0., 10.).expand([out_features]).to_event(1))\n",
     "        \n",
