fix test; revert predictive

--- a/tutorial/source/bayesian_regression_ii.ipynb
+++ b/tutorial/source/bayesian_regression_ii.ipynb
@@ -200,8 +200,9 @@
     "\n",
     "num_samples = 1000\n",
     "predictive = Predictive(model, guide=guide, num_samples=num_samples)\n",
-    "svi_samples = {k: v.reshape(num_samples).detach().cpu().numpy() \n",
-    "               for k, v in predictive(log_gdp, is_cont_africa, ruggedness).items()}"
+    "svi_samples = {k: v.reshape(num_samples).detach().cpu().numpy()\n",
+    "               for k, v in predictive(log_gdp, is_cont_africa, ruggedness).items()\n",
+    "               if k != \"obs\"}"
    ]
   },
   {
@@ -267,7 +268,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sample: 100%|██████████| 1200/1200 [00:30, 39.22it/s, step size=2.76e-01, acc. prob=0.934]\n"
+      "Sample: 100%|██████████| 1200/1200 [00:30, 38.99it/s, step size=2.76e-01, acc. prob=0.934]\n"
      ]
     }
    ],
@@ -467,7 +468,8 @@
    "source": [
     "predictive = Predictive(model, guide=guide, num_samples=num_samples)\n",
     "svi_mvn_samples = {k: v.reshape(num_samples).detach().cpu().numpy() \n",
-    "                   for k, v in predictive(log_gdp, is_cont_africa, ruggedness).items()}\n",
+    "                   for k, v in predictive(log_gdp, is_cont_africa, ruggedness).items()\n",
+    "                   if k != \"obs\"}\n",
     "fig, axs = plt.subplots(nrows=2, ncols=2, figsize=(12, 10))\n",
     "fig.suptitle(\"Marginal Posterior density - Regression Coefficients\", fontsize=16)\n",
     "for i, ax in enumerate(axs.reshape(-1)):\n",
