add comment in Poutine tutorial that the first version of LogJointMessenger can only handle observed samples

--- a/tutorial/source/effect_handlers.ipynb
+++ b/tutorial/source/effect_handlers.ipynb
@@ -213,6 +213,8 @@
     "    # It takes a dictionary msg containing the name, distribution,\n",
     "    # observation or sample value, and other metadata from the sample site.\n",
     "    def _pyro_sample(self, msg):\n",
+    "        # Any unobserved random variables will trigger this assertion.\n",
+    "        # In the next section, we'll learn how to also handle sampled values.\n",
     "        assert msg[\"name\"] in self.data\n",
     "        msg[\"value\"] = self.data[msg[\"name\"]]\n",
     "        # Since we've observed a value for this site, we set the \"is_observed\" flag to True\n",
