further explanation of predictive information criteria (Kucukelbir, Gelman) and explanation of Bayes estimators

--- a/tutorial/source/dirichlet_process_mixture.ipynb
+++ b/tutorial/source/dirichlet_process_mixture.ipynb
@@ -128,7 +128,7 @@
         "plt.show()\n",
         "N = data.shape[0]"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -257,7 +257,9 @@
         "colab_type": "text"
       },
       "source": [
-        "When performing inference, we set our 'guess' for the maximum number of clusters in the dataset to $T = 8$. We define the optimization algorithm (`pyro.optim.Adam`) along with the Pyro SVI object and train the model for 1000 iterations. Note that after performing inference, we remove any clusters that have less than a certain weight assigned to them according to our learned variational distributions, and then re-normalize the weights so that they sum to one:"
+        "When performing inference, we set our 'guess' for the maximum number of clusters in the dataset to $T = 8$. We define the optimization algorithm (`pyro.optim.Adam`) along with the Pyro SVI object and train the model for 1000 iterations. \n",
+        "\n",
+        "After performing inference, we construct the Bayes estimators of the means (the expected values of each factor in our variational approximation) and plot them in red on top of the original dataset.  Note that we also have we removed any clusters that have less than a certain weight assigned to them according to our learned variational distributions, and then re-normalize the weights so that they sum to one:"
       ]
     },
     {
@@ -308,7 +310,7 @@
         "plt.show()\n",
         "plt.tight_layout()"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +389,7 @@
         "plt.ylabel(\"Number of Years\")\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -478,7 +480,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,6 +501,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gjn4x2JqBfll",
+        "colab_type": "text"
+      },
+      "source": [
+        "The above plot is the mixture density of the Bayes estimators of the cluster parameters, weighted by their corresponding weights. As in the Gaussian example, we have taken the Bayes estimators of each cluster parameter and their corresponding weights by computing the posterior means of `lambda` and `beta` respectively."
       ]
     },
     {
@@ -543,7 +555,7 @@
         "elbo_plot.tight_layout()\n",
         "elbo_plot.show()\n"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -581,11 +593,21 @@
       "source": [
         "## Long-Term Sunspot Model\n",
         "\n",
-        "Since we computed the approximate posterior of the DPMM that was fit to the long-term sunspot data, we can utilize some intrinsic metrics, such as the mean log predictive, posterior dispersion indices, and posterior predictive checks. Since the posterior predictive distribution for a Dirichlet process mixture model is itself a scale-mixture distribution that has an analytic approximation (Blei and Jordan, 2004), this makes it particularly amenable to the aforementioned metrics:\n",
+        "Since we computed the approximate posterior of the DPMM that was fit to the long-term sunspot data, we can utilize some intrinsic metrics, such as the mean predictive, posterior dispersion indices, and posterior predictive checks. \n",
+        "\n",
+        "Since the posterior predictive distribution for a Dirichlet process mixture model is itself a scale-mixture distribution that has an analytic approximation [(Blei and Jordan, 2004)](http://www.cs.columbia.edu/~blei/papers/BleiJordan2004.pdf), this makes it particularly amenable to the aforementioned metrics:\n",
         "\n",
         "$$p(x_{new} | X_{1:N}, \\alpha, G_0) \\approx \\sum_{t=1}^T \\mathbb{E}_q [\\pi_t(\\beta)] \\ \\mathbb{E}_q \\left[p(x_{new} | \\theta_t)\\right].$$\n",
         "\n",
-        "We compute these below on a holdout subset of the data, after re-training the model on a training subset. "
+        "In particular, to compute the mean predictive, we first compute the posterior predictive distribution (defined above) after performing variational inference on our model using a training subsample of our data. The mean predictive is then the sample mean of the predictive density evaluated at each point in the test subsample. Since both the training samples and the testing samples were taken from the same dataset, we would expect the model to assign high probability to the test samples, despite not having seen them during inference.\n",
+        "\n",
+        "The posterior dispersion index is defined as the ratio of the variance of the predictive distribution under the posterior, to the expectation of the predictive distribution under the posterior, evaluated at a test point $x_{\\text{new}}$:\n",
+        "\n",
+        "$$\\text{PDI } = \\frac{ \\mathbb{V}_{\\theta | X} [ p(x_{\\text{new}} | \\theta) ]}{ \\mathbb{E}_{\\theta | X} [ p(x_{\\text{new}} | \\theta) ]}$$\n",
+        "\n",
+        "A point with a high PDI implies a high level of uncertainty of the likelihood of that point (with respect to the posterior); qualitatively, it roughly indicates points that the model cannot confidently explain. For further reading regarding both of these metrics, see [Posterior Dispersion Indices (Kucukelbir, 2016)](https://arxiv.org/pdf/1605.07604.pdf) and [Understanding predictive information criteria for Bayesian models (Gelman et al., 2013)](http://www.stat.columbia.edu/~gelman/research/published/waic_understand3.pdf).\n",
+        "\n",
+        "We compute these metrics below on a holdout subset of the data, after re-training the model on a training subset. "
       ]
     },
     {
@@ -697,7 +719,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,6 +780,8 @@
         "5.   Pedregosa, et al. *Scikit-Learn: Machine Learning in Python*. JMLR 12, pp. 2825-2830 (2011).\n",
         "6.   Bishop, Christopher. *Pattern Recogition and Machine Learning*. Springer Ltd (2006).\n",
         "7.   *Sunspot Index and Long-Term Solar Observations*. WDC-SILSO, Royal Observatory of Belgium, Brussels (2018).\n",
+        "8.   Kucukelbir, Alp. *Posterior Dispersion Indices*. CoRR, Cornell Research Repository, 2016.\n",
+        "9.   Gelman, Andrew. *Understanding predictive information criteria for Bayesian models*. Statistics and Computing, Springer Link, 2014.\n",
         "\n",
         "\n"
       ]
