add a comment to set_mode in gp tutorial :

--- a/tutorial/source/gp.ipynb
+++ b/tutorial/source/gp.ipynb
@@ -490,6 +490,8 @@
     }
    ],
    "source": [
+    "# tell gpr that we want to get samples from guides\n",
+    "gpr.set_mode('guide')\n",
     "print('variance = {}'.format(gpr.kernel.variance))\n",
     "print('lengthscale = {}'.format(gpr.kernel.lengthscale))\n",
     "print('noise = {}'.format(gpr.noise))"
