updating cells as per @fehiepsi

--- a/tutorial/source/dirichlet_process_mixture.ipynb
+++ b/tutorial/source/dirichlet_process_mixture.ipynb
@@ -28,7 +28,7 @@
         "Bayesian nonparametric models are models where the number of parameters grow freely with the amount of data provided; thus, instead of training several models that vary in complexity and comparing them, one is able to design a model whose complexity grows as more data are observed. The prototypical example of Bayesian nonparametrics in practice is the *Dirichlet Process Mixture Model* (DPMM). A DPMM allows for a practitioner to build a mixture model when the number of distinct clusters in the geometric structure of their data is unknown – in other words, the number of clusters is allowed to grow as more data is observed. This feature makes the DPMM highly useful towards exploratory data analysis, where few facets of the data in question are known; this presentation aims to demonstrate this fact.\n",
         "\n",
         "## The Dirichlet Process (Ferguson, 1973)\n",
-        "Dirichlet processes are a family of probability distributions over discrete probability distributions. Formally, the Dirichlet process (DP) is specified by some base probability distribution $G_0: \\Omega \\to \\mathbb{R}$ and a positive, real, scaling parameter commonly denoted as $\\alpha$. For any disjoint union $\\Omega_1, ..., \\Omega_k$ of $\\Omega$, and any sample $G \\sim DP(G_0, \\alpha)$, we have:\n",
+        "Dirichlet processes are a family of probability distributions over discrete probability distributions. Formally, the Dirichlet process (DP) is specified by some base probability distribution $G_0: \\Omega \\to \\mathbb{R}$ and a positive, real, scaling parameter commonly denoted as $\\alpha$. A sample $G$ from a Dirichlet process with parameters $G_0: \\Omega \\to \\mathbb{R}$ and $\\alpha$ is itself a distribution over $\\Omega$. For any disjoint partition $\\Omega_1, ..., \\Omega_k$ of $\\Omega$, and any sample $G \\sim DP(G_0, \\alpha)$, we have:\n",
         "\n",
         "$$(G(\\Omega_1), ..., G(\\Omega_k)) \\sim \\text{Dir}(\\alpha G_0(\\Omega_1), ..., \\alpha G_0(\\Omega_k))$$\n",
         "\n",
@@ -71,6 +71,7 @@
       },
       "source": [
         "import torch\n",
+        "from torch.distributions import constraints\n",
         "import torch.nn.functional as F\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -82,7 +83,9 @@
         "import pyro\n",
         "from pyro.optim import Adam\n",
         "from pyro.infer import SVI, Trace_ELBO\n",
-        "from torch.distributions import constraints"
+        "assert pyro.__version__.startswith('1.0.0')\n",
+        "pyro.enable_validation(True)       # can help with debugging\n",
+        "pyro.set_rng_seed(0)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -94,6 +97,7 @@
         "colab_type": "text"
       },
       "source": [
+        "\n",
         "\n",
         "# **Inference**\n",
         "\n",
@@ -293,10 +297,14 @@
         "\n",
         "alpha = 0.1\n",
         "train(1000)\n",
+        "\n",
+        "# We make a point-estimate of our model parameters using the posterior means of tau and phi for the centers and weights\n",
         "Bayes_Centers_01, Bayes_Weights_01 = truncate(alpha, pyro.param(\"tau\").detach(), torch.mean(pyro.param(\"phi\").detach(), dim=0))\n",
         "\n",
         "alpha = 1.5\n",
         "train(1000)\n",
+        "\n",
+        "# We make a point-estimate of our model parameters using the posterior means of tau and phi for the centers and weights\n",
         "Bayes_Centers_15, Bayes_Weights_15 = truncate(alpha, pyro.param(\"tau\").detach(), torch.mean(pyro.param(\"phi\").detach(), dim=0))\n",
         "\n",
         "plt.figure(figsize=(15, 5))\n",
@@ -307,8 +315,8 @@
         "plt.subplot(1, 2, 2)\n",
         "plt.scatter(data[:, 0], data[:, 1], color=\"blue\")\n",
         "plt.scatter(Bayes_Centers_15[:, 0], Bayes_Centers_15[:, 1], color=\"red\")\n",
-        "plt.show()\n",
-        "plt.tight_layout()"
+        "plt.tight_layout()\n",
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": [
@@ -463,14 +471,16 @@
         "\n",
         "samples = torch.arange(0, 300).type(torch.float)\n",
         "\n",
-        "tau_optimal = zip(pyro.param(\"tau_0\").detach(), pyro.param(\"tau_1\").detach())\n",
+        "tau0_optimal = pyro.param(\"tau_0\").detach()\n",
+        "tau1_optimal = pyro.param(\"tau_1\").detach()\n",
         "kappa_optimal = pyro.param(\"kappa\").detach()\n",
         "\n",
-        "Bayes_Rates = np.asarray([tau0 / tau1 for tau0, tau1 in tau_optimal])\n",
+        "# We make a point-estimate of our latent variables using the posterior means of tau and kappa for the cluster params and weights\n",
+        "Bayes_Rates = (tau0_optimal / tau1_optimal).numpy()\n",
         "Bayes_Weights = mix_weights(1. / (1. + kappa_optimal))\n",
         "\n",
         "def mixture_of_poisson(weights, rates, samples):\n",
-        "    return sum( [weights[i] * np.exp(Poisson(rates[i]).log_prob(samples)) for i in range(len(weights))] )\n",
+        "    return (weights * Poisson(rates).log_prob(samples.unsqueeze(-1)).exp()).sum(-1)\n",
         "\n",
         "likelihood = mixture_of_poisson(Bayes_Weights, Bayes_Rates, samples)\n",
         "\n",
@@ -522,7 +532,7 @@
       "source": [
         "### ELBO Behavior\n",
         "\n",
-        "Below are plots of the behavior of the loss function (negative Trace_ELBO) over the SVI iterations during inference using Pyro, as well as a plot of the autocorrelations of the ELBO 'time series' versus iteration number. We can see that around 500 iterations, the loss stops decreasing significantly, so we can assume it takes around 500 iterations to achieve convergence. The autocorrelation plot reaches an autocorrelation very close to 0 around a lag of 400, further corroborating this hypothesis. Note that these are heuristics and do not necessarily imply convergence."
+        "Below are plots of the behavior of the loss function (negative Trace_ELBO) over the SVI iterations during inference using Pyro, as well as a plot of the autocorrelations of the ELBO 'time series' versus iteration number. We can see that around 500 iterations, the loss stops decreasing significantly, so we can assume it takes around 500 iterations to achieve convergence. The autocorrelation plot reaches an autocorrelation very close to 0 around a lag of 500, further corroborating this hypothesis. Note that these are heuristics and do not necessarily imply convergence."
       ]
     },
     {
@@ -667,11 +677,9 @@
         }
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "data, data_test = train_test_split(df['sunspot.year'].values, test_size=0.1)\n",
-        "data = torch.tensor(data, dtype=torch.float)\n",
-        "data_test = torch.tensor(data_test, dtype=torch.float)\n",
+        "# Hold out 10% of our original data to test upon\n",
+        "data_test = torch.tensor(df.sample(frac=0.1).values, dtype=torch.float)\n",
+        "data = torch.tensor(df.drop(data_test.index).values, dtype=torch.float)\n",
         "N = data.shape[0]\n",
         "T = 20\n",
         "\n",
@@ -701,6 +709,7 @@
         "    pdi.append(pdi_d)\n",
         "pdi = np.asarray(pdi)\n",
         "\n",
+        "# We take the posterior means \n",
         "Bayes_Rates = np.asarray([tau0 / tau1 for tau0, tau1 in zip(tau_0_final, tau_1_final)])\n",
         "Bayes_Weights = mix_weights(1. / (1. + kappa_final))\n",
         "\n",
