--- a/tutorial/source/bayesian_regression.ipynb
+++ b/tutorial/source/bayesian_regression.ipynb
@@ -747,8 +747,8 @@
     "        \n",
     "    def forward(self, *args, **kwargs):\n",
     "        samples = {}\n",
-    "        guide_trace = poutine.trace(guide).get_trace(*args, **kwargs)\n",
-    "        model_trace = poutine.trace(poutine.replay(model, guide_trace)).get_trace(*args, **kwargs)\n",
+    "        guide_trace = poutine.trace(self.guide).get_trace(*args, **kwargs)\n",
+    "        model_trace = poutine.trace(poutine.replay(self.model, guide_trace)).get_trace(*args, **kwargs)\n",
     "        for site in prune_subsample_sites(model_trace).stochastic_nodes:\n",
     "            samples[site] = model_trace.nodes[site]['value']\n",
     "        return tuple(v for _, v in sorted(samples.items()))\n",
