fix MADE author

--- a/tutorial/source/dmm.ipynb
+++ b/tutorial/source/dmm.ipynb
@@ -834,9 +834,9 @@
     "<br />&nbsp;&nbsp;&nbsp;&nbsp;\n",
     "Diederik P. Kingma, Tim Salimans, Rafal Jozefowicz, Xi Chen, Ilya Sutskever, Max Welling    \n",
     "\n",
-    "[4] `MADE: Masked Autoencoder for Distribution Estimation Mathieu`,\n",
+    "[4] `MADE: Masked Autoencoder for Distribution Estimation`,\n",
     "<br />&nbsp;&nbsp;&nbsp;&nbsp;\n",
-    "Germain, Karol Gregor, Iain Murray, Hugo Larochelle \n",
+    "Mathieu Germain, Karol Gregor, Iain Murray, Hugo Larochelle \n",
     "\n",
     "[5] `Modeling Temporal Dependencies in High-Dimensional Sequences:`\n",
     "<br />&nbsp;&nbsp;&nbsp;&nbsp;\n",
